implement openapi and removing dto package --> generated by openapi
