# src/main/resources/swagger/openapi.yaml
@@ -23,7 +23,7 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/User'
-  /todo:
+  /todos:
     get:
       tags:
         - jsonplaceholder
@@ -36,6 +36,32 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Todo'
+  /posts:
+    get:
+      tags:
+        - jsonplaceholder
+      summary: Save all posts from the jsonplaceholder api
+      operationId: retrievePosts
+      responses:
+        '200':
+          description: successful operation
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Post'
+  /comments:
+    get:
+      tags:
+        - jsonplaceholder
+      summary: Save all comments from the jsonplaceholder api
+      operationId: retrieveComments
+      responses:
+        '200':
+          description: successful operation
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Comment'
 components:
   schemas:
     User:
@@ -50,8 +76,6 @@ components:
           example: "Leanne Graham"
         username:
           type: string
-          minLength: 5
-          maxLength: 20
           example: "Bret"
         address:
           $ref: '#/components/schemas/Address'
@@ -117,3 +141,36 @@ components:
           example: delectus aut autem
         completed:
           type: boolean
+    Post:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int64
+          example: 1
+        userDto:
+          $ref: '#/components/schemas/User'
+        title:
+          type: string
+          example: delectus aut autem
+        body:
+          type: string
+          example: delectus aut autem
+    Comment:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int64
+          example: 1
+        post:
+          $ref: '#/components/schemas/Post'
+        email:
+          type: string
+          example: test@test.com
+        body:
+          type: string
+          example: delectus aut autem
+        name:
+          type: string
+          example: delectus aut autem
